test/fails/bad_tags/mult9.lgl
tag a is vec<2>;
tag b is vec<3>;
tag c is b;
tag d is b;

void main() {
    a->b a_b = [[1., 1.], [1., 1.], [1., 1.]];
    b->c b_c = [[1., 1., 1.], [1., 1., 1.], [1., 1., 1.]];

    a->vec3 fail = b_c * a_b; // This subsumption is illegal cause you can't go to vec3, you maniac!
}